Fix nav element to be right aligned

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -31,7 +31,7 @@ span {
   align-self: center;
   height: 120px;
   margin: 0px;
-  width: 50%;
+  width: 15%;
 }
 
 i {
